force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/HDT_Process_Sale_Partner_Community__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Processo Sale Partner Community</label>
</CustomObject>