force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/AddedDiscountsOrBonusesVASEle__c.field-meta.xml
<CustomField>
    <fullName>AddedDiscountsOrBonusesVASEle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggiunta Sconti o Bonus VAS Ele</label>
    <type>Checkbox</type>
</CustomField>