force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/ConnectionWithActivation__c.field-meta.xml
<CustomField>
    <fullName>ConnectionWithActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connessione con Attivazione</label>
    <type>Checkbox</type>
</CustomField>