force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/EleTakesOver__c.field-meta.xml
<CustomField>
    <fullName>EleTakesOver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subentro Ele</label>
    <type>Checkbox</type>
</CustomField>