force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/FirstActivationEle__c.field-meta.xml
<CustomField>
    <fullName>FirstActivationEle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prima Attivazione Ele</label>
    <type>Checkbox</type>
</CustomField>