force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/FirstActivationWithModification__c.field-meta.xml
<CustomField>
    <fullName>FirstActivationWithModification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prima Attivazione con modifica</label>
    <type>Checkbox</type>
</CustomField>