force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/SwitchToRestorative__c.field-meta.xml
<CustomField>
    <fullName>SwitchToRestorative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Switch in Ripristinatorio</label>
    <type>Checkbox</type>
</CustomField>