force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/TemporaryNewActivation__c.field-meta.xml
<CustomField>
    <fullName>TemporaryNewActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporanea - Nuova Attivazione</label>
    <type>Checkbox</type>
</CustomField>