force-app/main/default/objects/HDT_Process_Sale_Partner_Community__c/fields/VultureWithSwitch__c.field-meta.xml
<CustomField>
    <fullName>VultureWithSwitch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voltura con Switch</label>
    <type>Checkbox</type>
</CustomField>